fixed layout issues, added favicon, fixed delete icon

--- a/styles/main.css
+++ b/styles/main.css
@@ -140,7 +140,7 @@ h2 {
 .content {
   min-height: 100vh;
   display: grid;
-  grid-template-rows: min-content 1fr min-content;
+  grid-template-rows: min-content minmax(10px, 1fr) min-content;
 }
 
 
@@ -159,6 +159,11 @@ main {
   background-color: var(--grey);
 }
 
+#dashboard {
+  background: rgb(20, 20, 20);
+  background: linear-gradient(180deg, rgba(20, 20, 20, 1) 0%, rgba(20, 20, 20, 1) 23%, rgba(153, 153, 153, 1) 100%);
+}
+
 @media screen and (max-width: 770px) {
   main {
     background-position-x: 75%;
@@ -169,9 +174,9 @@ main {
 /* HOME SECTION */
 
 .overlay {
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  left: 0;
+  left: 0; */
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
@@ -179,7 +184,7 @@ main {
 
 .home-container {
   width: 100%;
-  height: 80%;
+  height: 95%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -191,9 +196,28 @@ main {
   font-weight: 300;
 }
 
+@media screen and (max-width: 900px) {
+  .home-title {
+    font-size: 5rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .home-title {
+    font-size: 3rem;
+  }
+}
+
 .home-subtitle {
   font-size: 2rem;
   font-weight: 300;
+  margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 500px) {
+  .home-subtitle {
+    font-size: 2rem;
+  }
 }
 
 .btn-menu {
@@ -323,6 +347,18 @@ main {
   font-weight: 400;
 }
 
+@media screen and (max-width: 770px) {
+  .dashboard-header h1 {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 475px) {
+  .dashboard-header h1 {
+    font-size: 1.5rem;
+  }
+}
+
 .dashboard-menu-items {
   grid-area: aside;
   background-color: var(--primary-text);
@@ -339,6 +375,7 @@ main {
 }
 
 .dashboard-menu-item {
+  position: relative;
   width: 100%;
   border-radius: 5px;
   background-color: var(--grey);
@@ -352,7 +389,6 @@ main {
 .dashboard-menu-item summary {
   text-transform: uppercase;
   border: none;
-  position: relative;
 }
 
 .dashboard-menu-item p {
@@ -397,6 +433,12 @@ summary:focus {
   padding: 1rem;
 }
 
+@media screen and (max-width: 770px) {
+  .menu-item-form h2 {
+    font-size: 2rem;
+  }
+}
+
 .menu-item-form input[type=text],
 .dashboard-menu-input-form textarea {
   display: block;
@@ -421,8 +463,8 @@ summary:focus {
 
 .fa-trash {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: .6rem;
+  right: 1rem;
   color: var(--secondary-text);
   cursor: pointer;
   transition: color .3s ease;
@@ -489,7 +531,6 @@ summary:focus {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  /* margin-bottom: .25rem; */
 }
 
 .hort-line {
